k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-app
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
    - name: http
      protocol: TCP
      port: 80          
      targetPort: 8000
